tests/negative/neg_pr1112a_shared_wrapper_collision.safe
package neg_pr1112a_shared_wrapper_collision

   type settings is record
      value : integer;

   shared cfg : settings = (value = 1);

   safe_shared_cfg : integer = 0;
